--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "firebase": "^7.14.3",
+    "node-telegram-bot-api": "^0.50.0",
+    "open-graph-scraper": "^3.6.2"
+  }
 }
