--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "firebase": "^7.14.3",
     "node-telegram-bot-api": "^0.50.0",
     "open-graph-scraper": "^3.6.2"
