--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
+    "dotenv": "^8.2.0",
     "firebase": "^7.14.3",
     "node-telegram-bot-api": "^0.50.0",
     "open-graph-scraper": "^3.6.2"
