--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"dotenv": "^8.2.0",
 		"firebase": "^7.15.5",
 		"node-telegram-bot-api": "^0.50.0",
+		"nodemon": "^2.0.4",
 		"open-graph-scraper": "^3.6.2",
 		"telegram-test": "^0.1.7"
 	},
