--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "mocha --reporter spec"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^7.15.5",
     "node-telegram-bot-api": "^0.50.0",
     "nodemon": "^2.0.4",
